<resources>
    <string name="app_name">GithubUser</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="change_language">Change Language</string>
    <string name="connection_problem">Connection Problem</string>
    <string name="profile">Profile</string>
    <string name="tab_follower">Follower</string>
    <string name="tab_following">Following</string>
    <string name="no_user_found">No User Found</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="_0">0</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="daily_remainder">Daily Remainder</string>
    <string name="reminder_active">Daily Reminder Activated</string>
    <string name="reminder_non_active">Daily Reminder Deactivated</string>
    <string name="user_deleted">Data Deleted from Favorite</string>
    <string name="user_added">Data Added to Favorite</string>
</resources>