<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_200"
        android:theme="@style/ActionBarTheme"
        style="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/settings"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:text="@string/change_language"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:padding="16dp"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:drawableStartCompat="@drawable/ic_baseline_language_24" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swRemainder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:fontFamily="@font/poppins_regular"
        android:background="?attr/selectableItemBackground"
        android:textColor="?attr/colorPrimaryDark"
        android:theme="@style/SwitchTheme"
        android:text="@string/daily_remainder"
        android:textStyle="normal"
        android:textSize="14sp"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/change_language"
        app:drawableStartCompat="@drawable/ic_baseline_add_alert_24" />
</androidx.constraintlayout.widget.ConstraintLayout>