<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".activity.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_200"
        android:theme="@style/ActionBarTheme"
        style="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/profile"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"       >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:backgroundTint="@color/white"
            android:theme="@style/Theme.Transparent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapseToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:expandedTitleMarginStart="40dp"
                app:expandedTitleMarginEnd="60dp"
                app:titleEnabled="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="?attr/actionBarSize"
                    android:padding="4dp"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivAvatar"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_baseline_account_circle_24" />
                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/name" />
                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:text="@string/username" />
                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/location"
                        app:drawableTopCompat="@drawable/ic_baseline_location_city_24" />
                    <TextView
                        android:id="@+id/tvCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/company"
                        app:drawableTopCompat="@drawable/ic_baseline_work_24" />

                    <TextView
                        android:id="@+id/tvRepository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:drawablePadding="4dp"
                        android:text="@string/_0"
                        app:drawableStartCompat="@drawable/ic_baseline_folder_shared_24" />
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:tabIndicatorColor="@color/teal_200"
                app:tabSelectedTextColor="@color/teal_200" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="8dp"
        android:padding="4dp"
        android:visibility="invisible"
        android:theme="@style/ColorProgressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?attr/progressBarStyle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        app:borderWidth="0dp"
        android:tint="@color/white"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" />
</androidx.constraintlayout.widget.ConstraintLayout>